--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "JavaLearning_d5d1ee06"
+        },
+        {
+            "type": "java",
             "name": "Launch ArrayLN",
             "request": "launch",
             "mainClass": "projects.dataStructures.ArrayLN",
